# 2026-gcse-chinese-trainer

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  compose.yaml  core.py  init_db.py  main.py  migrate_question.py  models.py  pyproject.toml  services.py
docs/: bug.md  prd.md  todo.md
public/: recorder.js
routes/: auth.py  practice.py  review.py
tests/: test_ai.py  test_auth.py  test_dashboard.py  test_main.py  test_models.py  test_practice.py  test_profile_routes.py  test_questions.py  test_review.py  test_review_home_button.py  test_routes_practice.py  test_upload.py
uploads/: 26_1_1769936332.webm  27_1_1769936648.webm  27_1_1769936683.webm  41_1_1769937844.webm  42_1_1769938089.webm  43_1_1769938105.webm  45_1_1769938220.webm  47_1_1769938560.webm  47_2_1769938567.webm  47_3_1769938575.webm  47_4_1769938589.webm  47_5_1769938595.webm
